--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/landing.css">
 
+  <link rel="icon" href="image/favicon.png">
+
 
   <link href="https://fonts.cdnfonts.com/css/recoleta" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/recoleta" rel="stylesheet">
@@ -40,6 +42,8 @@
   </div>
 </nav>
 
+<!-- LANDING PAGE -->
+
 <section class="landing_page">
   <div class="product_preview_container">
     <!-- <img src="image/tsl_rosemary.png" alt="/" class="product_preview"> --> 
@@ -48,15 +52,17 @@
         Ship Add-on's for VSF and VSNG
       </h2>
       <p class="site_descrip">
-        Quality and optimized add-ons
+        Quality and optimized add-ons for simulation
       </p>
       <button class="buy_now_btn">
-        Buy now
+      SHIP YARD
       </button>
     </span>   
 
   </div>
 </section>
+
+<!-- LANDING PAGE END -->
 
   
 </body>
