added footer prototype (about link hidden)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <ul class="navbar_menu">
         <li class="navbar_items"><a class="navbar_links" href="ships.html">SHIPS</a></li>
         <li class="navbar_items"><a class="navbar_links" href="sceneries.html">SCENERIES</a></li>
-        <li class="navbar_items"><a class="navbar_links" href="about.html">ABOUT</a></li>
+        <!-- <li class="navbar_items"><a class="navbar_links" href="about.html">ABOUT</a></li> -->
         <li class="navbar_items"><a class="navbar_links" href="contact me.html">CONTACT ME</a></li>
       </ul>
     <!-- </div> -->
@@ -158,6 +158,40 @@
 
 
 <!-- LATEST RELEASE END-->
+
+<!-- FOOTER START -->
+
+<section class="footer_container">
+  <div class="footer_socials">
+    <h2>SARCA VIRTUAL SHIPYARD</h2>
+    <div class="footer_social_links">
+      <a href="/"><img src="/image/social logo/logo-discord.svg" alt="logo-discord"></a>
+      <a href="/"><img src="/image/social logo/logo-facebook.svg" alt="logo-facebook"></a>
+      <a href="/"><img src="/image/social logo/logo-github.svg" alt="logo-github"></a>
+      <a href="/"><img src="/image/social logo/logo-twitter.svg" alt="logo-twitter"></a>
+      <a href="/"><img src="/image/social logo/logo-github.svg" alt="logo-github"></a>
+    </div>
+
+  </div>
+  <div class="footer_contact">
+    <h4>REQUEST ADD-ON</h4>
+    <div class="footer_form">
+      <input type="text" placeholder="Your request">
+      <button class="footer_send">SEND</button>
+    </div>
+
+  </div>
+  <div class="footer_cc">
+    <p>ALL RIGHTS RESERVED DAVE. 2022</p>
+  </div>
+</section>
+
+
+
+
+<!-- FOOTER END -->
+
+
 
 
   
