replaced shipyard_btn to requuest add-on

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="info">
         <h1>Ship Add-on's for VSNG & VSF</h1>
         <p>Quality and optimized add-ons for simulation</p>
-        <a href="/shipyard.html ">SHIPYARD </a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdLXvSR0Io7kQukSKx8YvQKBP89tJNQvRQG3OHATNMdVYkVLQ/viewform?usp=pp_url" target="_blank" > REQUEST ADD-ON </a>
       </div>
     </div>
   </section>
