added links to social_logos (footer) removed spotify link

--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
   <div class="footer_socials">
     <h2>SARCA VIRTUAL SHIPYARD</h2>
     <div class="footer_social_links">
-      <a href="/"><img src="/image/social logo/logo-discord.svg" alt="logo-discord"></a>
-      <a href="/"><img src="/image/social logo/logo-facebook.svg" alt="logo-facebook"></a>
-      <a href="/"><img src="/image/social logo/logo-github.svg" alt="logo-github"></a>
-      <a href="/"><img src="/image/social logo/logo-twitter.svg" alt="logo-twitter"></a>
-      <a href="/"><img src="/image/social logo/logo-github.svg" alt="logo-github"></a>
+      <a href="https://discord.com/channels/@me" target="_blank"><img src="/image/social logo/logo-discord.svg" alt="logo-discord"></a>
+      <a href="https://web.facebook.com/dayveeee07" target="_blank"><img src="/image/social logo/logo-facebook.svg" alt="logo-facebook"></a>
+      <a href="https://github.com/dayveeee07" target="_blank"><img src="/image/social logo/logo-github.svg" alt="logo-github"></a>
+      <a href="https://twitter.com/dave_daveeeeeee" target="_blank"><img src="/image/social logo/logo-twitter.svg" alt="logo-twitter"></a>
+      <!-- <a href="https://open.spotify.com/user/rdwku7mm5ja42e6wuph1rq5ts"><img src="/image/social logo/logo-spotify.svg" alt="logo-github"></a> -->
     </div>
 
   </div>
