added ship info page

--- a/ship-info.html
+++ b/ship-info.html
@@ -8,21 +8,86 @@
 
   <link rel="stylesheet" href="css/body.css">
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/shipinfo.css">
 
   <link rel="icon" href="image/favicon.png">
 
   <link href="https://fonts.cdnfonts.com/css/recoleta" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/recoleta" rel="stylesheet">
+
+  <script type=module src=main.js></script>
+  <script src="script.js" defer></script>
 </head>
+
 <body>
+
+<!-- NAV -->
+
+<main-header></main-header>
+
+<span class="addon_navigation">
+  <p>Home / </p>
+
+</span>
+
+<section class="addon_info_container" id="rosemary">
+  <div class="addon_info_preview">
+    <div class="addon_img_container">
+      <img src="/image/rosemary.png" alt="">
+
+      <div class="addon_type">PAYWARE</div>
+    </div>
+    <div class="addon_details">
+      <h2>TSL ROSEMARY</h2>
+      <h3>$20.99</h3>
+      <div class="addon_description">
+        <p class="addon_description_title">
+          Description:
+        </p>
+        <p>
+          A General Cargo that was built in 2012
+           (10 years ago) and is sailing under the flag of Malta.
+          It's carrying capacity is 33191 t DWT and her current 
+          draught is reported to be 6.8 meters. Her length overall 
+          <!-- (LOA) is 177 meters and her width is 28.66 meters. However, in the virtual world. TSL Rosemary was built in 2022 and 
+          is currently dry docked at SARCA's Shipyard. She has a cruising speed
+          of 17.2 knots (top speed) and will serve the CEBU - MANILA - HONGKONG
+        route after its maintenance. This was the largest ship built by SARCA.  -->
+        </p>
+        <p class="addon_update">Latest update: V2.5 BETA</p>
+        <p>-added moving ports (radar, rudder, propeller)</p>
+
+      </div>
   
-  <div class="wip">
+      <div class="addon_footer">
+        <a href="/">MORE INFO</a>
+        <a href="/">DOWNLOAD</a>
+      </div>
+     
+    </div>
+
+    <div class="addon_info_back">
+      <a href="/">RETURN TO PAGE</a>
+    </div>
+  </div>
+
+
+</section>
+
+
+<main-footer></main-footer>
+
+  <!-- <div class="wip">
     <h1>WORK IN PROGRESS</h1>
     <p>ALL RIGHTS RESERVED 2022 DAVE. </p>
     <a href="index.html"><button class="back">
       GO BACK
     </button></a>
-  </div>
+  </div> -->
+
+
+
+
 
 </body>
 </html>
